src/current/_includes/v24.3/known-limitations/data-domiciling-limitations.md
- When columns are [indexed]({{ page.version.version }}/indexes.md), a subset of data from the indexed columns may appear in [meta ranges]({{ page.version.version }}/architecture/distribution-layer.md#meta-ranges) or other system tables. CockroachDB synchronizes these system ranges and system tables across nodes. This synchronization does not respect any multi-region settings applied via either the [multi-region SQL statements]({{ page.version.version }}/multiregion-overview.md), or the low-level [zone configs]({{ page.version.version }}/configure-replication-zones.md) mechanism.
- [Zone configs]({{ page.version.version }}/configure-replication-zones.md) can be used for data placement but these features were historically built for performance, not for domiciling. The replication system's top priority is to prevent the loss of data and it may override the zone configurations if necessary to ensure data durability. For more information, see [Replication Controls]({{ page.version.version }}/configure-replication-zones.md#types-of-constraints).
- If your [log files]({{ page.version.version }}/logging-overview.md) are kept in the region where they were generated, there is some cross-region leakage (like the system tables described previously), but the majority of user data that makes it into the logs is going to be homed in that region. If that's not strong enough, you can use the [log redaction functionality]({{ page.version.version }}/configure-logs.md#redact-logs) to strip all raw data from the logs. You can also limit your log retention entirely.
- If you start a node with a [`--locality`]({{ page.version.version }}/cockroach-start.md#locality) flag that says the node is in region _A_, but the node is actually running in some region _B_, data domiciling based on the inferred node placement will not work. A CockroachDB node only knows its locality based on the text supplied to the `--locality` flag; it can not ensure that it is actually running in that physical location.